Fix graphical event overflow.

--- a/static/style.css
+++ b/static/style.css
@@ -491,6 +491,14 @@ along with their colors.
     overflow: visible;
 }
 
+.event-body {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .days .event {
     border: 1px solid black;
 }
